fix vertical align issue

--- a/src/district-heart/sass/forms.scss
+++ b/src/district-heart/sass/forms.scss
@@ -118,6 +118,11 @@ select {
     .btn {
       background-color: #004d68;
       color: $brand-white;
+      margin-bottom: 10px;
+
+      @media (min-width: 480px) {
+        margin-bottom: 0;
+      }
     }
   }
 
